<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.url_settings.UrlSettingsActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_toolbar"
            android:layout_width="match_parent"
            android:layout_height="56dp">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_settings"
                android:textColor="@color/color_grey_300"
                style="@style/TextFont.Bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tv_done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_done"
                android:textColor="@color/color_grey_300"
                style="@style/TextFont.Bold"
                android:layout_marginStart="16dp"
                android:padding="4dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_input_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_grey_100"
            android:textSize="16sp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="32dp"
            style="@style/TextFont.Bold"
            android:text="@string/str_input_app_url"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/bg_round_grey_outline_8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_reference_number"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

            <EditText
                android:id="@+id/edittext_server_url"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/EditText.Bold"
                android:hint=""
                android:textAlignment="viewStart"
                android:gravity="center_vertical|start"
                android:textColor="@color/color_grey_100"
                android:maxLines="1"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />

        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.appcompat.widget.LinearLayoutCompat>

</layout>