<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_title_from"
                style="@style/TextFont.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_from"
                android:textColor="@color/black" />

            <TextView
                style="@style/TextFont.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=":"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tv_from"
                style="@style/TextFont.Regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:ellipsize="end"
                android:maxLines="1" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_title_to"
                style="@style/TextFont.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_to"
                android:textColor="@color/black" />

            <TextView
                style="@style/TextFont.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=":"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tv_to"
                style="@style/TextFont.Regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:ellipsize="end"
                android:maxLines="1" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintEnd_toStartOf="@id/tv_priority"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_title_action"
                    style="@style/TextFont.Bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_action"
                    android:textColor="@color/black" />

                <TextView
                    style="@style/TextFont.Bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=":"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tv_action"
                    style="@style/TextFont.Regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:ellipsize="end"
                    android:maxLines="1" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <TextView
                android:id="@+id/tv_priority"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_red"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_title_status"
                style="@style/TextFont.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_status"
                android:textColor="@color/black" />

            <TextView
                style="@style/TextFont.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=":"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tv_status"
                style="@style/TextFont.Regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:ellipsize="end"
                android:maxLines="1" />

            <TextView
                android:id="@+id/tv_title_date"
                style="@style/TextFont.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/str_date"
                android:textColor="@color/black" />

            <TextView
                style="@style/TextFont.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=":"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tv_date"
                style="@style/TextFont.Regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:ellipsize="end"
                android:maxLines="1" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_title_note"
                style="@style/TextFont.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_note"
                android:textColor="@color/black" />

            <TextView
                style="@style/TextFont.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=":"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tv_note"
                style="@style/TextFont.Regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:ellipsize="end"
                android:maxLines="1" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.8dp"
            android:background="@color/color_grey_800"/>


    </androidx.appcompat.widget.LinearLayoutCompat>

</layout>