<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/layout_outside"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical|start">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_round_white_8dp"
                android:paddingTop="24dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:gravity="center_horizontal"
                android:paddingBottom="24dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/str_one_time_password"
                    android:gravity="start"
                    android:textAlignment="textStart"
                    style="@style/TextFont.Bold"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_marginEnd="20dp" />

                <TextView
                    android:id="@+id/tv_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="16dp"
                    android:textAlignment="viewStart"
                    android:textSize="14sp"
                    android:textColor="#273653"
                    android:layout_marginEnd="20dp" />

                <EditText
                    android:id="@+id/edittext_otp"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="22dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:inputType="number"
                    android:digits="0123456789"
                    android:textSize="16sp"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:textColor="@color/color_grey_300"
                    android:background="@drawable/bg_round_grey_outline_8dp" />

                <TextView
                    android:id="@+id/tv_message_error"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="11sp"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:textAlignment="viewStart"
                    android:gravity="start"
                    android:textColor="@color/color_floating_action_button"/>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end|center_vertical"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="32dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_submit"
                        android:gravity="center"
                        android:text="@string/str_submit"
                        android:textColor="@color/white"
                        android:background="@drawable/bg_round_white_8dp"
                        android:layout_width="wrap_content"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_height="48dp"
                        android:backgroundTint="@color/purple_700" />

                    <TextView
                        android:id="@+id/tv_cancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_cancel"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        style="@style/TextFont.Bold"
                        android:textColor="@color/black" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </RelativeLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

</layout>
